Enhance Vietnamese Dependency Parsing Framework
- Added new command-line options for training baseline models and listing available parsers in the CLI.
- Introduced a new configuration option for parser type in the training script.
- Implemented a parser factory to streamline the creation of different parser types.
- Added support for traditional parsers (Malt, MST, Turbo) alongside neural parsers.
- Updated evaluator to handle both neural and traditional parsing models.
- Removed deprecated files and refactored existing code for improved clarity and maintainability.

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,8 @@
 # Vietnamese Dependency Parser Configuration
 
+# Parser type: bilstm, transition
+parser_type: bilstm
+
 # Model hyperparameters
 model:
   embedding_dim: 100
