Implement data processing and model training components for Vietnamese Dependency Parsing
- Added new data processing modules including dataset loaders, vocabulary management, and dependency dataset class.
- Introduced a data analyzer for hyperparameter optimization based on dataset statistics.
- Implemented a BiLSTM trainer and transition trainer for different parsing strategies.
- Created a trainer factory to manage various trainer types and configurations.
- Established a base trainer class for shared functionality across different trainer implementations.
- Updated project dependencies in pyproject.toml to include necessary libraries for data handling and model training.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,10 @@ dependencies = [
     "conllu==6.0.0",
     "loguru==0.7.3",
     "PyYAML==6.0.3",
-    "flask>=3.0.0"
+    "flask>=3.0.0",
+    "transformers>=4.30.0",
 ]
 
-[project.optional-dependencies]
-bert = [
-    "transformers>=4.30.0",
-]
-all = [
-    "transformers>=4.30.0",
-]
 
 [tool.setuptools.packages.find]
 where = ["."]
