Refactor Dependency Parser and Enhance Project Structure
- Updated the DependencyParser class to inherit from the Model class and improved its initialization parameters.
- Introduced a new BertEmbedding module for better integration with BERT models.
- Added ScalarMix for parameterized scalar mixtures of tensors.
- Implemented a new DependencyParserTrainer class for streamlined training processes.
- Enhanced the pyproject.toml to exclude 'datasets' from package discovery.
- Added utility functions for data handling and logging improvements.
- Introduced new modules for handling CoNLL data formats and parallel processing.
- Removed unused files and optimized existing code for clarity and maintainability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["."]
-exclude = ["checkpoints*", "venv*", "data", "logs", "results", "configs"]
+exclude = ["checkpoints*", "venv*", "datasets", "logs", "results"]
 
 [project.scripts]
 train = "scripts.cli:train"
